[gd_scene load_steps=2 format=2]

[ext_resource path="res://source/interface/game/InfoDialogue.gd" type="Script" id=1]

[node name="InfoDialogue" type="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -500.0
margin_top = -128.0
margin_right = 500.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 0
script = ExtResource( 1 )

[node name="Panel" type="PanelContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 993.0
margin_bottom = 121.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 979.0
margin_bottom = 107.0
custom_constants/separation = 16

[node name="CharacterName" type="Label" parent="Panel/VBoxContainer"]
margin_right = 972.0
margin_bottom = 14.0
text = "Character Name"

[node name="InfoText" type="Label" parent="Panel/VBoxContainer"]
margin_top = 30.0
margin_right = 972.0
margin_bottom = 44.0
text = "Character text"
